--- a/public/comments.css
+++ b/public/comments.css
@@ -27,18 +27,30 @@
     --cmntr-btn-hover-bg: var(--vp-c-brand-1);
 }
 
-.comentario-root .comentario-add-comment-host {
+.comentario-root .comentario-add-comment-host:not(.comentario-editor-inserted) {
     border: 1px solid var(--vp-c-divider);
 }
+
+.comentario-root textarea:focus {
+    outline:0;
+    border-color: var(--vp-c-brand-1);
+    outline:0;
+    box-shadow:inset 0 1px 2px rgba(0,0,0,.075),0 0 0 .25rem rgba(158, 229, 91, 0.25)
+}
+
 
 .comentario-root .comentario-toolbar .comentario-btn-tool {
     --cmntr-btn-color: var(--vp-c-text-2);
 }
 
 comentario-comments {
+    --cmntr-color: var(--vp-c-text-1);
     --cmntr-bg: var(--vp-c-bg);
     --cmntr-input-bg: var(--vp-custom-block-details-bg);
     --cmntr-input-color: var(--vp-c-text-1);
     --cmntr-link-color: var(--vp-c-brand-1);
     --cmntr-link-hover-color: var(--vp-c-brand-1);
+    --cmntr-bg-shade: var(--vp-c-bg-alt);
+    --cmntr-dlg-header-bg: var(--vp-c-bg-elv);
+    --cmntr-dlg-border: var(--vp-c-divider);
 }
