--- a/.vitepress/theme/style.css
+++ b/.vitepress/theme/style.css
@@ -68,12 +68,9 @@
 
   /* main color + fs25 */
   --vp-c-brand-1: #57A72D;
-  --vp-c-brand-2: #57A72D;
-  --vp-c-brand-3: #57A72D;
-  
- 
-
-  --vp-c-brand-soft: var(--vp-c-indigo-soft);
+  --vp-c-brand-2: #6fd13a;
+  --vp-c-brand-3: rgb(74, 141, 38);
+  --vp-c-brand-soft: #57A72D25;
 
   --vp-c-tip-1: var(--vp-c-brand-1);
   --vp-c-tip-2: var(--vp-c-brand-2);
